--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,39 @@
   height: 40vmin;
   pointer-events: none;
 }
+.btn_regular{
+  padding: 4px 10px;
+  background: #282c34;
+  color: #ffff;
+  border: 1px solid #282c34;
+  font-weight: 100;
+  text-decoration: none;
+  border-radius: 12px;
+  transition: all .4s;
+}
+.btn_regular:hover{
+  background: none;
+  /* border: 1px solid #282c34; */
+  color: #282c34;
+  /* font-weight: 400; */
+}
+.btn_outline{
+  background: none;
+  padding: 4px 10px;
+  border: 1px solid #282c34;
+  color: #282c34;;
+  border-radius: 12px;
+  transition: all .4s;
+  text-decoration: none;
+}
+.btn_outline:hover{
+  background: #282c34;
+  color: #fff;
+}
+.title{
+  color: #f8406e;
+  font-weight: bold;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
