--- a/src/Page/Home/home.css
+++ b/src/Page/Home/home.css
@@ -8,3 +8,10 @@
    font-weight: bold;
    font-size: 3rem;
 }
+
+.spiner{
+    width: 100vw;
+    height: 80vh;
+    display: grid;
+    place-items: center center;
+}
